--- a/src/style.css
+++ b/src/style.css
@@ -8,7 +8,20 @@ html {
   line-height: 1.6;
   font-family: sans-serif; /* add google fonts */
 }
-/* General atributes for each page */
+
+body {
+  background: url("https://drive.google.com/uc?export=view&id=13MdevlT6snYhCvoHxRcWdBnw_ebfijg4") center fixed repeat; /*log in background*/
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+  display: flex;
+  flex-flow: column;
+  justify-content: center;
+  margin-left: 2rem;
+}
+
+/* General atributes for each page class */
 .page {
   display: none;
   width: 100%;
@@ -19,3 +32,48 @@ html {
 .active {
   display: block;
 }
+
+.newsfeed {
+  background: url("https://drive.google.com/uc?export=view&id=1xxxukjZMWNKJsZj2rAAjBjGuIOwVReWG") center fixed repeat; /*newsfeed background*/
+}
+
+/* .modal {
+  margin-left: 2rem;
+} */
+
+a {
+  text-decoration: none; /*Eliminates de link underline*/
+  color: #000;
+}
+
+.blackBtn {
+  background-color: #000;
+  border: none;
+  border-radius: 0.3rem;
+  color: #fff;
+  padding: 0.5rem;
+  margin: 0.3rem;
+}
+
+.logo {
+  margin: 1rem;
+}
+
+.like:hover {
+
+}
+
+a img:last-child {
+  display: none;
+}
+a:hover img:last-child {
+  display: block;
+}
+a:hover img:first-child {
+  display: none;
+}
+/* https://drive.google.com/uc?export=view&id=1p79-A_uABKO4CS9Rl_pd1ccLYOdmtcCg  /*hover game over*/ */
+
+/* https://drive.google.com/uc?export=view&id=1TTIiJuok5go9FRYAGR6i_gz3K1_0OMQ3  /*hover love it*/ */
+
+/* https://drive.google.com/uc?export=view&id=19mr6Gje0LsrTXpFv7ibOFKj3_POMe34G  /*hover level up*/ */
