--- a/src/style.css
+++ b/src/style.css
@@ -25,12 +25,45 @@ body {
 .page {
   display: none;
   width: 100%;
-  min-height: 100%; /*Allow for the content offthe bottom of the page*/
   position: fixed; /*Or absolute ifthe user needs to scrollfor more content*/
   padding: 1rem 2rem;
+  margin-top: 10rem;
 }
+
 .active {
   display: block;
+}
+
+/* Add a black background color to the top navigation */
+.topnav {
+  background-color: #333;
+  overflow: hidden;
+  position:fixed;
+  top:-3.5rem;
+  left:0;
+  width: 100%;
+}
+
+/* Style the links inside the navigation bar */
+.topnav a {
+  float: left;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 1rem;
+  text-decoration: none;
+  font-size: .9rem;
+}
+
+/* Change the color of links on hover */
+.topnav a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+/* Add a color to the active/current link */
+.topnav a.active {
+  background-color: #4CAF50;
+  color: white;
 }
 
 .newsfeed {
@@ -57,10 +90,9 @@ a {
 
 .logo {
   margin: 1rem;
-}
-
-.like:hover {
-
+  height: 5rem;
+  width: 8rem;
+  margin-bottom: 5rem;
 }
 
 a img:last-child {
@@ -72,8 +104,3 @@ a:hover img:last-child {
 a:hover img:first-child {
   display: none;
 }
-/* https://drive.google.com/uc?export=view&id=1p79-A_uABKO4CS9Rl_pd1ccLYOdmtcCg  /*hover game over*/ */
-
-/* https://drive.google.com/uc?export=view&id=1TTIiJuok5go9FRYAGR6i_gz3K1_0OMQ3  /*hover love it*/ */
-
-/* https://drive.google.com/uc?export=view&id=19mr6Gje0LsrTXpFv7ibOFKj3_POMe34G  /*hover level up*/ */
